--- a/index.html
+++ b/index.html
@@ -1,1 +1,366 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pan Card</title>
+    <style>
+        .heading {
+            background-color: brown;
+            color: white;
+            text-align: center;
+        }
+
+        u {
+            color: orange;
+        }
+
+        .main {
+            color: red;
+        }
+
+        body {
+            background-color: peachpuff;
+        }
+
+        * {
+            margin: 0px -1px;
+        }
+
+        table,
+        tr,
+        td {
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="heading">
+        <b>Request for the new PAN Card/ Changes Or Corrections in PAN Card</b><br>
+        <i>Field Marked with <span class="main">*</span> (asterik) are mandatory.To Avoid Mistake Please refer
+            <u>guidelines</u> and <u>instructions</u></i>
+    </div>
+    <table width="100%">
+        <tbody>
+            <tr>
+                <td></td>
+                <td colspan="2">
+                    <span class="main">*</span><b>Whether he is a Citizen Of India</b>
+                    <label for="yes" style="padding-left: 60px;">Yes</label>
+                    <input type="radio" name="" id="yes">
+                    <label for="no" style="padding-left: 20px;">No</label>
+                    <input type="radio" name="" id="no">
+                </td>
+            </tr>
+
+            <tr>
+                <td></td>
+                <td colspan="2">
+                    <span class="main">*</span><b>Permanent Account Number (PAN)</b>
+                    <input type="text" name="" id="">
+                </td>
+            </tr>
+
+            <tr>
+                <td style="width:2%;text-align: center;">
+                    <input type="checkbox" name="" id="">
+                </td>
+                <td colspan="2">
+                    <span class="main">*</span>
+                    <b>1.Name
+                    </b>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+
+                </td>
+                <td colspan="2">
+                    <b> Title</b>
+                    <label for="shri" style="padding-left: 20px;">Shri/Mr</label>
+                    <input type="radio" name="" id="shri">
+
+                    <label for="smt" style="padding-left: 20px;">Smt/Mrs</label>
+                    <input type="radio" name="" id="smt">
+
+
+                    <label for="ms" style="padding-left: 20px;">Kumari/Ms</label>
+                    <input type="radio" name="" id="ms">
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                </td>
+                <td colspan="2">
+                    <div style="display: inline-block;">
+                        <b>
+                            <label for="Lastname/Surname">Lastname/Surname</label><br>
+                            <input type="text" name="" id=""><br>
+                        </b>
+                    </div>
+
+                    <div style="display: inline-block; padding-left: 150px;">
+                        <b>
+                            <label for="Lastname/Surname">Firstname</label><br>
+                            <input type="text" name="" id=""><br>
+                        </b>
+                    </div>
+
+                    <div style="display: inline-block; padding-left: 150px;">
+                        <b>
+                            <label for="Lastname/Surname">Middlename</label><br>
+                            <input type="text" name="" id=""><br>
+                        </b>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td></td>
+                <td colspan="2"><span class="main">*</span><b>Name as you would like it printer on the card </b><span
+                        style="color:blue;">(Prefix like Shri,Smt,kumari,late,Dr,CA,Ms,Mr,MRS,Alias etc. are not
+                        allowed)</span></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td colspan="2"><input type="text" name="" id=""></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td colspan="2">Details of parents.<span style="color:blue;">(Prefix like
+                        Shri,Smt,kumari,late,Dr,CA,Ms,Mr,MRS,Alias etc. are not allowed)</span></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td width="650px">Whether mother is single parent and you wish to apply for PAN by furnishing the name
+                    of tour mother only </td>
+                <td><label for="yes">Yes</label>
+                    <input type="radio" name="" id="yes">
+                    <label for="no" style="padding-left: 20px;">No</label>
+                    <input type="radio" name="" id="no">
+                </td>
+            </tr>
+            <tr>
+                <td style="width:2%;text-align: center;">
+                    <input type="checkbox" name="" id="">
+                </td>
+                <td colspan="2"><span class="main"><b>Father's Name</b><span style="color:blue;">(Mandatory field.Even
+                            married women
+                            should give father's name only)</span></td>
+            </tr>
+            <tr>
+                <td>
+                </td>
+                <td colspan="2">
+                    <div style="display: inline-block;">
+                        <b>
+                            <label for="Lastname/Surname">Lastname/Surname</label><br>
+                            <input type="text" name="" id=""><br>
+                        </b>
+                    </div>
+
+                    <div style="display: inline-block; padding-left: 150px;">
+                        <b>
+                            <label for="Lastname/Surname">Firstname</label><br>
+                            <input type="text" name="" id=""><br>
+                        </b>
+                    </div>
+
+                    <div style="display: inline-block; padding-left: 150px;">
+                        <b>
+                            <label for="Lastname/Surname">Middlename</label><br>
+                            <input type="text" name="" id=""><br>
+                        </b>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td style="width:2%;text-align: center;">
+                    <input type="checkbox" name="" id="">
+                </td>
+                <td colspan="2"><span class="main"><b>Mother's Name</b><span style="color:blue;">(This field is
+                            optional)</span></td>
+            </tr>
+
+            <tr>
+                <td>
+                </td>
+                <td colspan="2">
+                    <div style="display: inline-block;">
+                        <b>
+                            <label for="Lastname/Surname">Lastname/Surname</label><br>
+                            <input type="text" name="" id=""><br>
+                        </b>
+                    </div>
+
+                    <div style="display: inline-block; padding-left: 150px;">
+                        <b>
+                            <label for="Lastname/Surname">Firstname</label><br>
+                            <input type="text" name="" id=""><br>
+                        </b>
+                    </div>
+
+                    <div style="display: inline-block; padding-left: 150px;">
+                        <b>
+                            <label for="Lastname/Surname">Middlename</label><br>
+                            <input type="text" name="" id=""><br>
+                        </b>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><span class="main">*</span><b>4.Select parent name which is to be printed on the
+                        card</b><br><span style="color:blue;">(In case no option is provided then PAN card will be
+                        Issued with father's name)</span></td>
+                <td><label for="fathername">Father Name</label>
+                    <input type="radio" name="" id="fathername">
+                    <label for="mothername" style="padding-left: 20px;">Mother Name</label>
+                    <input type="radio" name="" id="mothername">
+                </td>
+            </tr>
+            <tr>
+
+                <td style="width:2%;text-align: center;">
+                    <input type="checkbox" name="" id="">
+                </td>
+                <td><span class="main">*</span><b>5.Date of Birth/Incorporation/Agreement/Partnership <br>or trust
+                        Deed/Formation of Body of Individuals/<br>Association of Persons</b></td>
+                <td>
+                    <div style=" display:inline-block">
+                        <label for="dd">DD</label><br>
+
+                        <select style="background-color: rgb(200, 200, 208);">
+                            <option value=01>DD</option>
+                            <option value=02>01</option>
+                            <option value=03>02</option>
+                            <option value=04>03</option>
+                            <option value=05>04</option>
+                            <option value=06>05</option>
+                            <option value=07>06</option>
+                            <option value=08>07</option>
+                            <option value=09>08</option>
+                            <option value=10>09</option>
+                            <option value=11>10</option>
+                            <option value=12>11</option>
+                        </select>
+                    </div>
+                    <div style=" display:inline-block ">
+                        <label for="mm">MM</label><br>
+                        <span class="main">
+                            <select style="background-color: rgb(200, 200, 208); ">
+                                <option value=01>MM</option>
+                                <option value=02>Jan</option>
+                                <option value=03>Feb</option>
+                                <option value=04>Mar</option>
+                                <option value=05>Apr</option>
+                                <option value=06>May</option>
+                                <option value=07>Jun</option>
+                                <option value=08>Jul</option>
+                                <option value=09>Aug</option>
+                                <option value=10>Sep</option>
+                                <option value=11>Oct</option>
+                                <option value=12>Nov</option>
+                            </select> </span>
+                    </div>
+                    <div style=" display:inline-block">
+                        <label for="year">YYYY</label><br>
+
+                        <input type="text" name="" id="" width="5px">
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td style="width:2%;text-align: center;">
+                    <input type="checkbox" name="" id="">
+                </td>
+                <td><span class=main>*</span><b>6.GENDER</b></td>
+                <td colspan="2">
+                    <label for="male">Male</label>
+                    <input type="radio" name="" id="male">
+                    <label for="female" style="padding-left: 20px;">Female</label>
+                    <input type="radio" name="" id="female">
+                    <label for="transgender" style="padding-left: 20px;">TransGender</label>
+                    <input type="radio" name="" id="transgender">
+
+                </td>
+            </tr>
+            <tr>
+                <td style="width:2%;text-align: center;">
+                    <input type="checkbox" name="" id="">
+                </td>
+
+                <td colspan="2"><b>7.Photo Mismatch</b></td>
+            </tr>
+            <tr>
+                <td style="width:2%;text-align: center;">
+                    <input type="checkbox" name="" id="">
+                </td>
+
+                <td colspan="2"><b>8.Signature Mismatch</b></td>
+            </tr>
+            <tr>
+                <td style="width:2%;text-align: center;">
+                    <input type="checkbox" name="" id="">
+                </td>
+                <td><span class=main>*</span><b>9.Address for communication</b></td>
+                <td><label for="residential">Residential</label>
+                    <input type="radio" name="" id="residential">
+                    <label for="office" style="padding-left:20px">Office</label>
+                    <input type="radio" name="" id="office">
+                </td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><b>Office Name</b><i>(to be filled only in case of office address)</i></td>
+                <td><input type="text" name="" id=""></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><b>Flat/Door/Block No.</b></td>
+                <td><input type="number" name="" id=""></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><b>Name of Premises/Building/village</b></td>
+                <td><input type="text" name="" id=""></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><b>Road/street/Lane/Post Office</b></td>
+                <td><input type="text" name="" id=""></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><b>Area/Locality/Taluka/Sub-Division</b></td>
+                <td><input type="text" name="" id=""></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><b>Town/City/District</b></td>
+                <td><input type="text" name="" id=""></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><b>State/Union Territory</b></td>
+                <td><select>
+                        <option value=01><b>----Please Select----</b> </option>
+                    </select></td>
+            </tr>
+
+            <tr>
+                <td></td>
+                <td><b>PIN</b><i>(indicating PIN is mandatory)</i></td>
+                <td><input type="number" name="" id=""></td>
+            </tr>
+        </tbody>
+    </table>
+
+
+</body>
+
+</html>
